# Analis-AI

./: .gitignore  README.md  SIGNAL_AND_BACKTESTING_SYSTEM.md  TRAIN_NEW_MODEL.md  features_indicators_analysis.md  start-all.ps1  train-model.ps1
backend_py/: .gitignore  PYTHON_BACKEND_DESCRIPTION.md  PYTHON_BACKEND_FULL_DESCRIPTION.md  alembic.ini  analyze_data.py  check_csv.py  check_data.py  pyproject.toml  requirements.txt  run_eda.py  run_eda2.py  scratch_analyze.py  test_pandas_ta.py  test_pandas_ta2.py  test_train.py  test_validate.py
backend_py/alembic/: env.py  script.py.mako
backend_py/alembic/versions/: .gitkeep
backend_py/app/: __init__.py  cache.py  config.py  database.py  main.py
backend_py/app/middleware/: auth.py
backend_py/app/ml/: dataset_service.py  feature_builder.py  feature_registry.py  feature_schema.py  model_store.py  quality.py  training.py
backend_py/app/models/: backtest_run.py  portfolio.py  signal.py  user.py  watchlist.py
backend_py/app/routes/: ai.py  auth.py  backtest.py  market.py  ml.py  portfolio.py  signal.py  watchlist.py
backend_py/app/schemas/: ai.py  auth.py  backtest.py  market.py  portfolio.py  signal.py  watchlist.py
backend_py/app/services/: ai_service.py  backtest_service.py  binance_ws.py  indicator_service.py  market_service.py  ml_feature_service.py  ml_inference_service.py  mtf_service.py  news_service.py  order_flow_service.py  (+1 more)
backend_py/scripts/: .gitkeep  ml_cli.py  seed_test_user.py
backend_py/tests/: test_auth.py  test_feature_contract.py  test_ml_quality.py  test_signal_engine.py
(+119 files in other folders)
